--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.0.1",
   "description": "ec3-1 socket.io toyproject",
   "scripts": {
-    "sch": "ts-node index.ts --scenario schedule",
-    "con": "ts-node index.ts --scenario connect"
+    "sch": "ts-node src/app.ts --scenario schedule",
+    "con": "ts-node src/app.ts --scenario connect",
+    "sch1": "ts-node src/app.ts --scenario schedule --port 4000",
+    "con1": "ts-node src/app.ts --scenario connect --port 4000",
+    "sch2": "ts-node src/app.ts --scenario schedule --port 4001",
+    "con2": "ts-node src/app.ts --scenario connect --port 4001"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/node": "^20.14.6",
     "@types/node-schedule": "^2.1.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "node-schedule": "^2.1.1",
     "redis": "^4.6.14",
-    "socket.io": "^4.2.0",
+    "socket.io": "4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
